--- a/app/views/zgloszenies/edit.html.erb
+++ b/app/views/zgloszenies/edit.html.erb
@@ -1,5 +1,5 @@
+<% content_for :title, " - Edycja zgłoszenia." %>
+
 <%= render 'zgloszenies/edit/edit', zgloszenies: @zgloszenies %>
 
 <%= render 'form', zgloszeny: @zgloszeny %>
-
-
