--- a/app/views/zgloszenies/index.html.erb
+++ b/app/views/zgloszenies/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, " - Zgłoszenia." %>
+
 <%= render 'zgloszenies/partials/search', zgloszenies: @zgloszenies %>
 <div class="table-responsive">
 <%= render 'zgloszenies/partials/zgloszenies_table', zgloszenies: @zgloszenies %>
