--- a/app/views/zgloszenies/new.html.erb
+++ b/app/views/zgloszenies/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, " - Nowe zgłoszenie." %>
+
 <%= render 'zgloszenies/edit/new', zgloszenies: @zgloszenies %>
 
 <%= render 'form', zgloszeny: @zgloszeny %>
