--- a/app/views/zgloszenies/show.html.erb
+++ b/app/views/zgloszenies/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, " - Podgląd zgłoszenia." %>
 <%= render 'zgloszenies/edit/page', zgloszenies: @zgloszenies %>
 
 <div class="jumbotron">
