--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
 <html>
   <head>
+    <title>Awaria <%= yield(:title) %></title>
     <%= csrf_meta_tags %>
     <%= content_for?(:head) ? yield(:head) : '' %>
     <%= javascript_include_tag "application" %>
@@ -10,14 +10,12 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-    <div class="row" style="margin-top: 120px">
-    <div class="fr">
-      <% flash.each do |name, msg| %>
-      <%= content_tag(:div, msg, class: "alert alert-info") %>
-      <% end %>
-       <%= yield %>
+      <div class="fr">
+        <% flash.each do |name, msg| %>
+        <%= content_tag(:div, msg, class: "alert alert-info") %>
+        <% end %>
+        <%= yield %>
      </div>
-     </div>
-</div>
+    </div>
   </body>
 </html>
