--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,8 +39,9 @@
 <hr class="colorgraph">
 <div class="row">
 <div class="col-xs-12 col-md-6">
+<div class="form-group">
 <%= f.submit "Aktualizuj", class:'btn btn-success btn-block btn-lg' %>
-<% end %></div>
+</div></div><% end %>
 <div class="col-xs-12 col-md-6">
 <%= button_to "Usuń konto", registration_path(resource_name), data: { confirm: "Jesteś pewny?" }, method: :delete, class:'btn btn-danger btn-block btn-lg' %>
 </div>
