--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= image_tag 'logo.png' %>
+  <%= image_tag 'logo.png', class: 'img-responsive' %>
 </div>
 </br>
 <nav class="navbar navbar-default">
