--- a/app/views/zgloszenies/partials/_search.html.erb
+++ b/app/views/zgloszenies/partials/_search.html.erb
@@ -3,7 +3,7 @@
 		<div id="custom-search-input">
 		<%= form_tag( zgloszenies_path ,method: :get, remote: true, class: "search_form_z") do %>
             <div class="input-group col-md-6">
-            <%= text_field_tag :search, params[:search], class: "search-query form-control", placeholder: 'Wpisz : Imie, Nazwisko, Email użytkownika, Nazwa urządzenia' %>
+            <%= text_field_tag :search, params[:search], class: "form-control SearchBar", placeholder: 'Wpisz : Imie, Nazwisko, Email użytkownika, Nazwa urządzenia' %>
                 <span class="input-group-btn">
                     <button class="btn btn-danger" type="button">
                         <span class=" fa fa-search"></span>
