--- a/app/views/dzials/index.html.erb
+++ b/app/views/dzials/index.html.erb
@@ -1,9 +1,15 @@
 <%= render 'dzials/partials/search', dzials: @dzials %>
 
 <div class="table-responsive">
-<%= render 'dzials/partials/dzials_table', dzials: @dzials %>
+  <%= render 'dzials/partials/dzials_table', dzials: @dzials %>
 </div>
+
+<div class="wrapper" align="center">
+  <%= will_paginate @dzials, renderer: BootstrapPagination::Rails %>
+</div>
+
+
 <div class="actions" align="center">
-<%= link_to 'Dodaj dział', new_dzial_path, class:'btn btn-sm btn-primary btn-create' %>
-<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-primary btn-create' %>
+  <%= link_to 'Dodaj dział', new_dzial_path, class:'btn btn-sm btn-primary btn-create' %>
+  <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-primary btn-create' %>
 </div><br/>
