--- a/app/views/stanowiskos/index.html.erb
+++ b/app/views/stanowiskos/index.html.erb
@@ -1,9 +1,14 @@
 <%= render 'stanowiskos/partials/search', stanowiskos: @stanowiskos %>
 
 <div class="table-responsive">
-<%= render 'stanowiskos/partials/stanowiskos_table', stanowiskos: @stanowiskos %>
+  <%= render 'stanowiskos/partials/stanowiskos_table', stanowiskos: @stanowiskos %>
 </div>
+
+<div class="wrapper" align="center">
+  <%= will_paginate @stanowiskos, renderer: BootstrapPagination::Rails %>
+</div>
+
 <div class="actions" align="center">
-<%= link_to 'Dodaj stanowisko', new_stanowisko_path, class:'btn btn-sm btn-primary btn-create' %>
-<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-primary btn-create' %>
+  <%= link_to 'Dodaj stanowisko', new_stanowisko_path, class:'btn btn-sm btn-primary btn-create' %>
+  <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-primary btn-create' %>
 </div><br/>
