--- a/app/views/zgloszenies/partials/_zgloszenies_table.html.erb
+++ b/app/views/zgloszenies/partials/_zgloszenies_table.html.erb
@@ -13,8 +13,8 @@
               <th>Wysyłka</th>
               <% if current_user.admin? %>
               <th>Zrealizowane?</th>
-              <th>ID USR</th>
-              <th>ID Pracownik</th>
+              <th>User</th>
+              <th>Pracownik</th>
               <% end %>
               <th>Akcje</th>
               <th></th>
@@ -33,14 +33,18 @@
               <td data-label="Data_naprawy"><%= zgloszeny.data_naprawy %></td>
               <td data-label="Nazwa_urzadzenia"><%= zgloszeny.nazwa_urzadzenia %></td>
               <td data-label="Opis_urzadzenia"><%= zgloszeny.opis_uszkodzenia %></td>
-              <td data-label="Wysylka"><%= zgloszeny.wysylka %></td>
+              <% if zgloszeny.wysylka == true %>
+              <td data-label="Tak">Tak</td>
+              <% else %>
+              <td data-label="Nie">Nie</td>
+              <% end %>
               <% if current_user.admin? %>
               <td data-label="Zrealizowane"><%= zgloszeny.zrealizowane %></td>
-              <td data-label="ID USR"><%= zgloszeny.user_id %></td>
+              <td data-label="User"><%= User.where(id:zgloszeny.user_id).pluck(:first_name).last %></td>
               <% if zgloszeny.pracownikid.nil? %>
                 Brak
               <% else %>
-                <td data-label="ID Pracownik"><%= zgloszeny.pracownikid %></td>
+                <td data-label="Pracownik"><%= User.where(id:zgloszeny.pracownikid).pluck(:first_name).last %></td>
               <% end %>
 <% end %>
 
